--- a/add-fonts.css
+++ b/add-fonts.css
@@ -1,4 +1,4 @@
-/* UPLOAD FILES TO SHOPIFY CONTENTS FILES, they copy the links here  */
+/* UPLOAD FILES TO SHOPIFY CONTENTS FILES, they copy the links here 1.0 */
 @font-face {
     font-family: 'breweryno2w06-boldregular';
     src: url('https://cdn.shopify.com/s/files/1/0887/4105/2730/files/brewery_no2_w06_bold-webfont.woff?v=1721095885') format('woff2'),
