--- a/logoslider.liquid
+++ b/logoslider.liquid
@@ -118,6 +118,18 @@
 }
 {% endschema %}
 
+
+
+<!-- Slick Slider CSS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+
+<!-- Slick Slider JS -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+
+
 <script type="text/javascript">
   $(document).ready(function(){
     $('.logos-slider').slick({
@@ -146,3 +158,5 @@
     });
   });
 </script>
+
+
